2011-03-12  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSNumberFormatter.m: Cache property values and reset them
	along with the formatter.
	* Source/NSLocale.m: Add 2 missing unlocks.

2011-03-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSBlocks.m: Added header
	* Headers/Additions/GNUstepBase/GSBlocks.h: Added header
	* Headers/Foundation/NSRegularExpression.h: Added header
	Added missing copyright headers etc.

2011-03-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Fix bug in resetting ... was ending up
	with an immutable dictionary for the registration domain.
	* Source/NSObject.m: fix references to isa.
	* Source/NSPropertyList.m: Fix unused increments.
	* Source/NSRunLoop.m: Remove unused code.
	* Source/NSSocketPort.m: Remove unused code.
	* Source/NSSocketPortNameServer.m: Remove unused code.
	* Source/NSTimeZone.m: Fix unused increment.
	* Source/NSUnarchiver.m: Fix unused assignment.

2011-03-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSAttributedString.m: remove unused assignment
	* Source/GSFormat.m: remove unused increments
	* Source/GSHTTPAuthentication.m: remove unused assignment, fix possible
	use of nil as a dictionary key.
	* Source/GSHTTPURLHandle.m: remove unused assignment, check length.
	* Source/GSSocketStream.m: remove unused assignments
	* Source/GSString.m: remove unused assignments
	* Source/NSAttributedString.m: (-description) fix leak
	* Source/NSAutoreleasePool.m: tweak for clang static analyser
	* Source/NSBundle.m: fix memory leak
	* Source/NSCachedURLResponse.m: fix error in -copy
	* Source/NSCalendarDate.m: remove unused increments.
	* Source/NSDate.m: fix parsing string with ordering too long
	* Source/NSHTTPCookie.m: remove unused assignments
	* Source/GSMime.m: fix unused assignments
	* Source/NSInvocation.m: remove unused code
	* Source/unix/NSStream.m: remove unused ivar
	* Tools/gdomap.c: remove unused code

2011-03-08  Richard Frith-Macdonald <rfm@gnu.org>
