@@ -12,6 +12,7 @@ DYNAMIC_LINKER=@DYNAMIC_LINKER@
 
 HAVE_LIBXML=@HAVE_LIBXML@
 HAVE_GNUTLS=@HAVE_GNUTLS@
+HAVE_BLOCKS=@HAVE_BLOCKS@
 
 WITH_FFI=@WITH_FFI@
 
