@@ -1,3 +1,12 @@
+2011-03-13  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* configure.ac:
+	* configure:
+	* config.mak.in:
+	* Source/GNUmakefile:
+	* Headers/Additions/GNUstepBase/config.h.in:
+	Add config check for blocks support.
+
 2011-03-12  Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/NSNumberFormatter.m: Cache property values and reset them
